// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImportWallet should render 2nd step 1`] = `
<div>
  <section
    class="space-y-8"
    data-testid="ImportWallet__second-step"
  >
    <div
      class="flex justify-between items-end bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-3xl"
          data-testid="header__title"
        >
          Import Wallet
        </h1>
        <div
          class="text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          Select the import method by which you want to import the address to your Profile.
        </div>
      </div>
    </div>
    <div
      class="flex flex-col space-y-4"
    >
      <fieldset
        class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
      >
        <label
          class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
          data-testid="FormLabel"
          for=""
        >
          Import Type
          <div
            class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
            data-testid="FormLabel__required"
          />
        </label>
        <div
          class="relative w-full"
        >
          <div
            class="fixed invisible w-auto whitespace-nowrap"
          >
            address
            …
          </div>
          <div
            class="Input__InputWrapperStyled-wu99qs-0 jYUFQr sr-only"
          >
            <div
              class="relative flex flex-1 h-full"
            >
              <input
                class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                data-testid="select-list__input"
                name=""
                readonly=""
                tabindex="-1"
                value="address"
              />
            </div>
          </div>
          <div
            class="relative w-full"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-owns="ImportWallet__select-menu"
              role="combobox"
            >
              <label
                for="ImportWallet__select-input"
                id="ImportWallet__select-label"
              />
              <div
                class="fixed invisible w-auto whitespace-nowrap"
              >
                Address
                …
              </div>
              <div
                class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
              >
                <div
                  class="relative flex flex-1 h-full"
                >
                  <input
                    aria-autocomplete="list"
                    aria-controls="ImportWallet__select-menu"
                    aria-labelledby="ImportWallet__select-label"
                    autocomplete="off"
                    class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                    data-testid="SelectDropdown__input"
                    id="ImportWallet__select-input"
                    name=""
                    placeholder="Select option"
                    value="Address"
                  />
                  <span
                    class="absolute inset-y-0 flex items-center font-normal opacity-50 pointer-events-none w-full"
                    data-testid="Input__suggestion"
                  >
                    <span
                      class="truncate"
                    >
                      Address
                    </span>
                  </span>
                </div>
                <div
                  class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                >
                  <div
                    class=""
                  >
                    <div
                      class="py-2 px-1 flex items-center justify-center"
                      data-testid="SelectDropdown__caret"
                    >
                      <div
                        class="sc-bdfBwQ gLRWTb transition-transform text-theme-secondary-500"
                        height="5"
                        width="7"
                      >
                        <svg>
                          caret-down.svg
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <ul
                aria-labelledby="ImportWallet__select-label"
                class="styles__SelectOptionsList-b2falt-0 dyOwRR"
                id="ImportWallet__select-menu"
                role="listbox"
              />
            </div>
          </div>
        </div>
      </fieldset>
      <fieldset
        class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
      >
        <label
          class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
          data-testid="FormLabel"
          for="value"
        >
          Address
          <div
            class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
            data-testid="FormLabel__required"
          />
        </label>
        <div
          class="fixed invisible w-auto whitespace-nowrap"
        >
          …
        </div>
        <div
          class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
        >
          <div
            class="relative flex flex-1 h-full"
          >
            <input
              class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
              data-testid="ImportWallet__address-input"
              name="value"
              type="text"
              value=""
            />
          </div>
        </div>
      </fieldset>
    </div>
  </section>
</div>
`;

exports[`ImportWallet should render 3rd step 1`] = `
<DocumentFragment>
  <section
    class="space-y-8"
    data-testid="ImportWallet__third-step"
  >
    <div
      class="flex justify-between items-end bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-3xl"
          data-testid="header__title"
        >
          Completed
        </h1>
        <div
          class="text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          Wallet import is complete. Now you can use it.
        </div>
      </div>
    </div>
    <div>
      <div
        class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 wqzJt no-ligatures"
        data-testid="TransactionDetail"
      >
        <div
          class="w-40 flex-1 space-y-2 whitespace-nowrap"
        >
          <div
            class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
          >
            Cryptoasset
          </div>
          <div
            class="font-semibold"
          >
            ARK Devnet
          </div>
        </div>
        <div
          aria-label="ARK Devnet"
          class="Circle__CircleWrapper-uw7h4j-0 bNDQMV border-theme-primary-100 text-theme-primary-400 ring-theme-background"
          data-testid="NetworkIcon-ARK-ark.devnet"
        >
          <div
            class="sc-bdfBwQ iyevwF"
            data-testid="NetworkIcon__icon"
            height="20"
            width="20"
          >
            <svg>
              ark.svg
            </svg>
          </div>
        </div>
      </div>
      <div
        class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 eAofZT no-ligatures"
        data-testid="TransactionDetail"
      >
        <div
          class="w-40 flex-1 space-y-2 whitespace-nowrap"
        >
          <div
            class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
          >
            Address
          </div>
          <div
            class="font-semibold"
          >
            <div
              class="flex-grow flex items-center no-ligatures overflow-hidden whitespace-nowrap"
            >
              <span
                class="TruncateMiddle__Wrapper-sc-3j3e79-0 whitespace-nowrap text-theme-text font-semibold text-base"
                data-testid="address__wallet-address"
              >
                DC8ghUdhS8w8d11K8cFQ37YsLBFhL3Dq2P
              </span>
            </div>
          </div>
        </div>
        <div
          class="Avatar__AvatarWrapper-sc-1vsy2s2-0 jrNmMB flex-shrink-0"
          data-testid="Avatar"
        >
          <div
            class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
          >
            <img
              alt="DC8ghUdhS8w8d11K8cFQ37YsLBFhL3Dq2P"
              src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(33, 150, 243)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"55\\" cx=\\"70\\" cy=\\"40\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"35\\" cx=\\"80\\" cy=\\"60\\" fill=\\"rgb(205, 220, 57)\\"/></svg>"
              title="DC8ghUdhS8w8d11K8cFQ37YsLBFhL3Dq2P"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 wqzJt no-ligatures"
      data-testid="TransactionDetail"
    >
      <div
        class="w-40 flex-1 space-y-2 whitespace-nowrap"
      >
        <div
          class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
        >
          Balance
        </div>
        <div
          class="font-semibold"
        >
          <span
            data-testid="Amount"
          >
            0.0000008 DARK
          </span>
        </div>
      </div>
    </div>
    <fieldset
      class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
    >
      <label
        class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
        data-testid="FormLabel"
        for="name"
      >
        Wallet Name
        <span
          class="ml-1 text-theme-secondary-500 dark:text-theme-secondary-700"
          data-testid="FormLabel__optional"
        >
          optional
        </span>
      </label>
      <div
        class="fixed invisible w-auto whitespace-nowrap"
      >
        …
      </div>
      <div
        class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
      >
        <div
          class="relative flex flex-1 h-full"
        >
          <input
            class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
            data-testid="ImportWallet__name-input"
            name="name"
            value=""
          />
        </div>
      </div>
    </fieldset>
  </section>
</DocumentFragment>
`;

exports[`ImportWallet should render as ledger import 1`] = `
<div>
  <div
    class="flex relative flex-col min-h-screen"
  >
    <nav
      aria-labelledby="main menu"
      class="NavigationBar__NavWrapper-sc-1qsoskw-0 bewuLZ"
    >
      <div
        class="relative flex h-21"
      >
        <button
          class="BackButton__StyledBackButton-sc-1pe22tv-0 hLgyWD flex w-12"
        >
          <div
            class="sc-bdfBwQ iMKUsi mx-auto"
            height="10"
            width="6"
          >
            <svg>
              arrow-left.svg
            </svg>
          </div>
        </button>
        <div
          class="flex flex-1 px-8 "
        >
          <div
            class="flex items-center my-auto"
          >
            <div
              class="NavigationBar__LogoContainer-sc-1qsoskw-2 itrWMc"
            >
              <svg
                width="44"
              >
                ark-logo.svg
              </svg>
            </div>
          </div>
          <ul
            class="flex ml-4 mr-auto space-x-8 h-21"
          >
            <li
              class="flex"
            >
              <a
                class="relative flex items-center font-semibold transition-colors duration-200 text-md text-theme-secondary-text focus:outline-none group"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                title="Portfolio"
              >
                <div
                  class="absolute inset-0 -mx-2 rounded ring-theme-primary-400 group-focus:ring-2 group-focus-visible"
                />
                Portfolio
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="relative flex items-center font-semibold transition-colors duration-200 text-md text-theme-secondary-text focus:outline-none group"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/plugins"
                title="Plugins"
              >
                <div
                  class="absolute inset-0 -mx-2 rounded ring-theme-primary-400 group-focus:ring-2 group-focus-visible"
                />
                Plugins
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="relative flex items-center font-semibold transition-colors duration-200 text-md text-theme-secondary-text focus:outline-none group"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
                title="Exchange"
              >
                <div
                  class="absolute inset-0 -mx-2 rounded ring-theme-primary-400 group-focus:ring-2 group-focus-visible"
                />
                Exchange
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="relative flex items-center font-semibold transition-colors duration-200 text-md text-theme-secondary-text focus:outline-none group"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/news"
                title="News"
              >
                <div
                  class="absolute inset-0 -mx-2 rounded ring-theme-primary-400 group-focus:ring-2 group-focus-visible"
                />
                News
              </a>
            </li>
          </ul>
          <div
            class="flex items-center my-auto space-x-4"
          >
            <div>
              <div
                class="relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-1 dlRYmL group"
                  >
                    <button
                      class="OriginalButton__StyledButton-sc-1y2wptt-0 fNHPRi"
                      data-testid="navbar__buttons--notifications"
                      type="button"
                    >
                      <div
                        class="flex relative items-center space-x-2"
                      >
                        <div
                          class="sc-bdfBwQ liSwOQ p-1"
                          height="18"
                          width="15"
                        >
                          <svg>
                            notification.svg
                          </svg>
                        </div>
                        <div
                          class="flex absolute right-0 justify-center items-center mr-3 -mt-3 w-3 h-3 rounded-full transition-all duration-100 ease-linear bg-theme-background group-hover:bg-theme-primary-50 dark:group-hover:bg-theme-secondary-800"
                        >
                          <div
                            class="w-2 h-2 rounded-full bg-theme-danger-500"
                          />
                        </div>
                      </div>
                    </button>
                  </div>
                </span>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div
              class="flex items-center"
            >
              <div
                class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-1 dlRYmL"
              >
                <button
                  class="OriginalButton__StyledButton-sc-1y2wptt-0 fNHPRi"
                  data-testid="navbar__buttons--send"
                  type="button"
                >
                  <div
                    class="flex relative items-center space-x-2"
                  >
                    <div
                      class="sc-bdfBwQ iNulIV p-1"
                      height="18"
                      width="18"
                    >
                      <svg>
                        sent.svg
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div
              class="flex items-center"
            >
              <div
                class="NavigationBar__NavigationButtonWrapper-sc-1qsoskw-1 dlRYmL"
              >
                <button
                  class="OriginalButton__StyledButton-sc-1y2wptt-0 fNHPRi"
                  data-testid="navbar__buttons--receive"
                  type="button"
                >
                  <div
                    class="flex relative items-center space-x-2"
                  >
                    <div
                      class="sc-bdfBwQ iSzUah p-1"
                      height="22"
                      width="22"
                    >
                      <svg>
                        qr-code.svg
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
          </div>
          <div
            class="flex items-center my-auto ml-8"
          >
            <div
              class="text-right"
            >
              <div
                class="text-xs font-semibold text-theme-secondary-700"
              >
                Your balance
              </div>
              <div
                class="text-sm font-bold text-theme-secondary-text dark:text-theme-text"
              >
                <span
                  data-testid="Amount"
                >
                  0 BTC
                </span>
              </div>
            </div>
            <div
              class="flex my-0.5 ml-4 -space-x-2"
            >
              <div
                class="Circle__CircleWrapper-uw7h4j-0 bNDQMV border-theme-primary-100 dark:border-theme-secondary-800 ring-theme-background"
              >
                <span
                  class="text-theme-secondary-text dark:text-theme-secondary-800"
                >
                  <div
                    class="sc-bdfBwQ fPrsah"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      btc.svg
                    </svg>
                  </div>
                </span>
              </div>
              <div
                class="relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="relative items-center justify-center align-middle rounded-full cursor-pointer"
                    data-testid="navbar__useractions"
                  >
                    <div
                      class="Avatar__AvatarWrapper-sc-1vsy2s2-0 jrNmMB flex-shrink-0"
                      data-testid="Avatar"
                    >
                      <div
                        class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                      >
                        <img
                          alt="Profile Avatar"
                          src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                        />
                        <span
                          class="absolute text-sm font-semibold text-theme-background dark:text-theme-text"
                        >
                          JO
                        </span>
                      </div>
                    </div>
                  </div>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex flex-col flex-1"
    >
      <div
        class="Section__SectionWrapper-sc-8cjvre-0 kJTPww flex-1"
      >
        <div
          class="container px-10 mx-auto"
        >
          <form
            class="max-w-xl mx-auto"
            data-testid="ImportWallet__form"
          >
            <div>
              <ul
                class="StepIndicator__StepWrapper-sc-15t41is-1 iToWWb"
              >
                <li
                  class="StepIndicator__StepStyled-sc-15t41is-0 dATCfl"
                />
                <li
                  class="StepIndicator__StepStyled-sc-15t41is-0 khoCaB"
                />
                <li
                  class="StepIndicator__StepStyled-sc-15t41is-0 khoCaB"
                />
                <li
                  class="StepIndicator__StepStyled-sc-15t41is-0 khoCaB"
                />
              </ul>
              <div
                class="mt-8"
                data-testid="LedgerTabs"
              >
                <div
                  data-testid="tab-pabel__active-panel"
                >
                  <section
                    data-testid="NetworkStep"
                  >
                    <div
                      class="flex justify-between items-end bg-theme-background"
                    >
                      <div
                        class="space-y-4"
                      >
                        <h1
                          class="mb-0 text-3xl"
                          data-testid="header__title"
                        >
                          Select a Cryptoasset
                        </h1>
                        <div
                          class="text-theme-secondary-text"
                          data-testid="header__subtitle"
                        >
                          Select a cryptoasset to import your existing wallet address.
                        </div>
                      </div>
                    </div>
                    <fieldset
                      class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col mt-8 space-y-2"
                    >
                      <label
                        class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
                        data-testid="FormLabel"
                        for="network"
                      >
                        Cryptoasset
                        <div
                          class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
                          data-testid="FormLabel__required"
                        />
                      </label>
                      <div>
                        <div
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          aria-owns="NetworkStep__network-menu"
                          data-testid="SelectNetwork"
                          role="combobox"
                        >
                          <label
                            for="NetworkStep__network-input"
                            id="NetworkStep__network-label"
                          />
                          <div
                            class="fixed invisible w-auto whitespace-nowrap"
                          >
                            
                            …
                          </div>
                          <div
                            class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
                          >
                            <div
                              class="Circle__CircleWrapper-uw7h4j-0 grnDUY border-theme-secondary-200 dark:border-theme-secondary-700 text-theme-secondary-500 ring-theme-background"
                              data-testid="SelectNetworkInput__network"
                            />
                            <div
                              class="relative flex flex-1 h-full"
                            >
                              <input
                                aria-autocomplete="list"
                                aria-controls="NetworkStep__network-menu"
                                aria-labelledby="NetworkStep__network-label"
                                autocomplete="off"
                                class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                                data-testid="SelectNetworkInput__input"
                                id="NetworkStep__network-input"
                                placeholder="Enter a cryptoasset name"
                                value=""
                              />
                              
                            </div>
                          </div>
                        </div>
                        <div
                          class=""
                          data-testid="SelectNetwork__options"
                        >
                          <div
                            class="mt-6"
                          >
                            <div
                              class="mb-3 text-sm font-bold text-theme-secondary-400 dark:text-theme-secondary-700"
                            >
                              PUBLIC NETWORKS
                            </div>
                            <ul
                              aria-labelledby="NetworkStep__network-label"
                              class="grid grid-cols-6 gap-3"
                              id="NetworkStep__network-menu"
                              role="listbox"
                            >
                              <li
                                class="inline-block cursor-pointer h-21"
                                data-testid="SelectNetwork__NetworkIcon--container"
                              >
                                <div
                                  aria-label="ARK"
                                  class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-secondary-700"
                                  data-testid="NetworkIcon-ARK-ark.mainnet"
                                >
                                  <div
                                    class="sc-bdfBwQ caqoGN"
                                    data-testid="NetworkIcon__icon"
                                    height="30"
                                    width="30"
                                  >
                                    <svg>
                                      ark.svg
                                    </svg>
                                  </div>
                                </div>
                              </li>
                              <li
                                class="inline-block cursor-pointer h-21"
                                data-testid="SelectNetwork__NetworkIcon--container"
                              >
                                <div
                                  aria-label="Compendia"
                                  class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-secondary-700"
                                  data-testid="NetworkIcon-ARK-compendia.mainnet"
                                >
                                  <div
                                    class="sc-bdfBwQ caqoGN"
                                    data-testid="NetworkIcon__icon"
                                    height="30"
                                    width="30"
                                  >
                                    <svg>
                                      bind.svg
                                    </svg>
                                  </div>
                                </div>
                              </li>
                            </ul>
                          </div>
                          <div
                            class="mt-6"
                          >
                            <div
                              class="mb-3 text-sm font-bold text-theme-secondary-400 dark:text-theme-secondary-700"
                            >
                              DEVELOPMENT NETWORKS
                            </div>
                            <ul
                              aria-labelledby="NetworkStep__network-label"
                              class="grid grid-cols-6 gap-3"
                              id="NetworkStep__network-menu"
                              role="listbox"
                            >
                              <li
                                class="inline-block cursor-pointer h-21"
                                data-testid="SelectNetwork__NetworkIcon--container"
                              >
                                <div
                                  aria-label="ARK Devnet"
                                  class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-primary-300"
                                  data-testid="NetworkIcon-ARK-ark.devnet"
                                >
                                  <div
                                    class="sc-bdfBwQ caqoGN"
                                    data-testid="NetworkIcon__icon"
                                    height="30"
                                    width="30"
                                  >
                                    <svg>
                                      ark.svg
                                    </svg>
                                  </div>
                                </div>
                              </li>
                            </ul>
                          </div>
                        </div>
                      </div>
                    </fieldset>
                  </section>
                </div>
              </div>
              <div
                class="flex justify-between mt-10"
              >
                <div />
                <div
                  class="flex space-x-3"
                >
                  <button
                    class="OriginalButton__StyledButton-sc-1y2wptt-0 izJbbP"
                    data-testid="Paginator__back-button"
                    type="button"
                  >
                    <div
                      class="flex relative items-center space-x-2"
                    >
                      Back
                    </div>
                  </button>
                  <button
                    class="OriginalButton__StyledButton-sc-1y2wptt-0 dYkFxS"
                    data-testid="Paginator__continue-button"
                    type="button"
                  >
                    <div
                      class="flex relative items-center space-x-2"
                    >
                      Continue
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ImportWallet should render network step 1`] = `
<DocumentFragment>
  <section
    data-testid="NetworkStep"
  >
    <div
      class="flex justify-between items-end bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-3xl"
          data-testid="header__title"
        >
          title
        </h1>
        <div
          class="text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          subtitle
        </div>
      </div>
    </div>
    <fieldset
      class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col mt-8 space-y-2"
    >
      <label
        class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
        data-testid="FormLabel"
        for="network"
      >
        Cryptoasset
        <div
          class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
          data-testid="FormLabel__required"
        />
      </label>
      <div>
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-owns="NetworkStep__network-menu"
          data-testid="SelectNetwork"
          role="combobox"
        >
          <label
            for="NetworkStep__network-input"
            id="NetworkStep__network-label"
          />
          <div
            class="fixed invisible w-auto whitespace-nowrap"
          >
            …
          </div>
          <div
            class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
          >
            <div
              class="Circle__CircleWrapper-uw7h4j-0 grnDUY border-theme-secondary-200 dark:border-theme-secondary-700 text-theme-secondary-500 ring-theme-background"
              data-testid="SelectNetworkInput__network"
            />
            <div
              class="relative flex flex-1 h-full"
            >
              <input
                aria-autocomplete="list"
                aria-controls="NetworkStep__network-menu"
                aria-labelledby="NetworkStep__network-label"
                autocomplete="off"
                class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                data-testid="SelectNetworkInput__input"
                id="NetworkStep__network-input"
                placeholder="Enter a cryptoasset name"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class=""
          data-testid="SelectNetwork__options"
        >
          <div
            class="mt-6"
          >
            <div
              class="mb-3 text-sm font-bold text-theme-secondary-400 dark:text-theme-secondary-700"
            >
              PUBLIC NETWORKS
            </div>
            <ul
              aria-labelledby="NetworkStep__network-label"
              class="grid grid-cols-6 gap-3"
              id="NetworkStep__network-menu"
              role="listbox"
            >
              <li
                class="inline-block cursor-pointer h-21"
                data-testid="SelectNetwork__NetworkIcon--container"
              >
                <div
                  aria-label="ARK"
                  class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-secondary-700"
                  data-testid="NetworkIcon-ARK-ark.mainnet"
                >
                  <div
                    class="sc-bdfBwQ caqoGN"
                    data-testid="NetworkIcon__icon"
                    height="30"
                    width="30"
                  >
                    <svg>
                      ark.svg
                    </svg>
                  </div>
                </div>
              </li>
              <li
                class="inline-block cursor-pointer h-21"
                data-testid="SelectNetwork__NetworkIcon--container"
              >
                <div
                  aria-label="Compendia"
                  class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-secondary-700"
                  data-testid="NetworkIcon-ARK-compendia.mainnet"
                >
                  <div
                    class="sc-bdfBwQ caqoGN"
                    data-testid="NetworkIcon__icon"
                    height="30"
                    width="30"
                  >
                    <svg>
                      bind.svg
                    </svg>
                  </div>
                </div>
              </li>
            </ul>
          </div>
          <div
            class="mt-6"
          >
            <div
              class="mb-3 text-sm font-bold text-theme-secondary-400 dark:text-theme-secondary-700"
            >
              DEVELOPMENT NETWORKS
            </div>
            <ul
              aria-labelledby="NetworkStep__network-label"
              class="grid grid-cols-6 gap-3"
              id="NetworkStep__network-menu"
              role="listbox"
            >
              <li
                class="inline-block cursor-pointer h-21"
                data-testid="SelectNetwork__NetworkIcon--container"
              >
                <div
                  aria-label="ARK Devnet"
                  class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-primary-300"
                  data-testid="NetworkIcon-ARK-ark.devnet"
                >
                  <div
                    class="sc-bdfBwQ caqoGN"
                    data-testid="NetworkIcon__icon"
                    height="30"
                    width="30"
                  >
                    <svg>
                      ark.svg
                    </svg>
                  </div>
                </div>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </fieldset>
  </section>
</DocumentFragment>
`;

exports[`ImportWallet should render network step without test networks 1`] = `
<DocumentFragment>
  <section
    data-testid="NetworkStep"
  >
    <div
      class="flex justify-between items-end bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-3xl"
          data-testid="header__title"
        >
          title
        </h1>
        <div
          class="text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          subtitle
        </div>
      </div>
    </div>
    <fieldset
      class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col mt-8 space-y-2"
    >
      <label
        class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
        data-testid="FormLabel"
        for="network"
      >
        Cryptoasset
        <div
          class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
          data-testid="FormLabel__required"
        />
      </label>
      <div>
        <div
          aria-expanded="true"
          aria-haspopup="listbox"
          aria-owns="NetworkStep__network-menu"
          data-testid="SelectNetwork"
          role="combobox"
        >
          <label
            for="NetworkStep__network-input"
            id="NetworkStep__network-label"
          />
          <div
            class="fixed invisible w-auto whitespace-nowrap"
          >
            …
          </div>
          <div
            class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
          >
            <div
              class="Circle__CircleWrapper-uw7h4j-0 grnDUY border-theme-secondary-200 dark:border-theme-secondary-700 text-theme-secondary-500 ring-theme-background"
              data-testid="SelectNetworkInput__network"
            />
            <div
              class="relative flex flex-1 h-full"
            >
              <input
                aria-autocomplete="list"
                aria-controls="NetworkStep__network-menu"
                aria-labelledby="NetworkStep__network-label"
                autocomplete="off"
                class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                data-testid="SelectNetworkInput__input"
                id="NetworkStep__network-input"
                placeholder="Enter a cryptoasset name"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class=""
          data-testid="SelectNetwork__options"
        >
          <div
            class="mt-6"
          >
            <ul
              aria-labelledby="NetworkStep__network-label"
              class="grid grid-cols-6 gap-3"
              id="NetworkStep__network-menu"
              role="listbox"
            >
              <li
                class="inline-block cursor-pointer h-21"
                data-testid="SelectNetwork__NetworkIcon--container"
              >
                <div
                  aria-label="ARK"
                  class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-secondary-700"
                  data-testid="NetworkIcon-ARK-ark.mainnet"
                >
                  <div
                    class="sc-bdfBwQ caqoGN"
                    data-testid="NetworkIcon__icon"
                    height="30"
                    width="30"
                  >
                    <svg>
                      ark.svg
                    </svg>
                  </div>
                </div>
              </li>
              <li
                class="inline-block cursor-pointer h-21"
                data-testid="SelectNetwork__NetworkIcon--container"
              >
                <div
                  aria-label="Compendia"
                  class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-secondary-700"
                  data-testid="NetworkIcon-ARK-compendia.mainnet"
                >
                  <div
                    class="sc-bdfBwQ caqoGN"
                    data-testid="NetworkIcon__icon"
                    height="30"
                    width="30"
                  >
                    <svg>
                      bind.svg
                    </svg>
                  </div>
                </div>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </fieldset>
  </section>
</DocumentFragment>
`;
